--- a/scss/common/_login.scss
+++ b/scss/common/_login.scss
@@ -1,43 +1,50 @@
+.caps-lock-warning.invisible {
+  display: none;
+}
+
 .create-account,
 #login-form {
-  table {
-    width: 100%;
+  input {
+    &[type='email'],
+    &[type='password'],
+    &[type='text'] {
+      @extend %text-field-box;
 
-    input {
-      &[type='email'],
-      &[type='password'],
-      &[type='text'] {
-        @extend %text-field-box;
-
-        display: inline-block;
-        margin-bottom: $spacer-xs;
-      }
+      display: inline-block;
+      margin-bottom: $spacer-xs;
     }
+  }
 
-    td {
-      padding-top: (($text-field-box-height - $font-size-base * $line-height-base) / 2);
-      padding-right: $modal-inner-spacer-x;
-      vertical-align: top;
+  td {
+    padding-right: $modal-inner-spacer-x;
+    vertical-align: top;
 
-      &:first-child + td {
-        padding-top: 0;
-      }
-
-      &:last-child {
-        padding-right: 0;
-      }
+    &:last-child {
+      padding-right: 0;
     }
   }
 }
 
 .create-account {
+  table {
+    margin-right: -.5em;
+    width: calc(100% + .5em);
+  }
+
+  td {
+    &.label {
+      padding-top: (($text-field-box-height - $font-size-base * $line-height-base) / 2);
+    }
+  }
+
   tr {
     &.input {
-      td {
-        padding-top: (($text-field-box-height - $font-size-base * $line-height-base) / 2);
+      input {
+        width: calc(100% - .5em);
       }
 
       .tip {
+        margin-bottom: $spacer-xs;
         max-width: none;
       }
     }
@@ -45,10 +52,22 @@
 
   .disclaimer {
     margin-top: $modal-footer-padding-y;
-    padding-right: ($modal-padding-x - $modal-footer-padding-x);
-    padding-left: ($modal-padding-x - $modal-footer-padding-x);
+    padding-right: $card-inner-spacer-x;
+    padding-left: $card-inner-spacer-x;
     text-align: right;
     width: 100%;
+  }
+
+  .instructions {
+    label {
+      font-weight: normal;
+    }
+  }
+
+  .modal-body {
+    form {
+      margin-bottom: 0;
+    }
   }
 
   .modal-footer {
@@ -57,18 +76,53 @@
 }
 
 #login-buttons {
+  align-items: center;
   margin-top: 0;
   margin-bottom: $modal-inner-spacer-y;
 
+  @media (min-width: map-get($grid-breakpoints, sm)) {
+    display: flex;
+  }
+
   button {
+    display: block;
     flex-basis: 0;
     flex-grow: 1;
-    margin-right: $modal-inner-spacer-x;
-    margin-bottom: 0;
+    margin-right: 0;
+    margin-bottom: ($modal-inner-spacer-y / 2);
     min-width: 0;
+    width: 100%;
+
+    @media (min-width: map-get($grid-breakpoints, sm)) {
+      margin-right: $modal-inner-spacer-x;
+      margin-bottom: 0;
+    }
 
     &:last-child {
       margin-right: 0;
     }
+  }
+}
+
+#login-form {
+  table {
+    width: 100%;
+  }
+
+  td:first-child:not(:empty) {
+    padding-top: (($text-field-box-height - $font-size-base * $line-height-base) / 2);
+  }
+}
+
+.login-modal {
+  .btn-primary {
+    margin-bottom: 0;
+  }
+
+  .modal-header + .alert {
+    border-radius: 0;
+    box-shadow: none;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
