--- a/scss/extensions/_button.scss
+++ b/scss/extensions/_button.scss
@@ -160,8 +160,8 @@
 
 %btn-footer {
   margin-left: $card-inner-spacer-x;
-  padding-right: ($card-inner-spacer-x);
-  padding-left: ($card-inner-spacer-x);
+  padding-right: $card-inner-spacer-x;
+  padding-left: $card-inner-spacer-x;
 
   &:first-child {
     margin-left: 0;
