--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.dropdown-select-box.dropdown-select-box .dropdown-header .btn {
+  height: $btn-height;
+}
+
 .select2-container {
   border: 0;
   border-radius: 0;
