--- a/common/common.scss
+++ b/common/common.scss
@@ -146,36 +146,10 @@ aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.po
 #topic-footer-buttons span > button.btn:hover,
 #topic-footer-buttons > button.btn:hover, .user-main .user-right .list-actions .btn:hover, .user-navigation .new-private-message:hover, .admin-contents .btn:hover {
   background-color: color-chooser($tertiary, #ffffff);
-}
-.image-upload-controls .btn:focus::before, .select2-container a.select2-choice:focus::before, .list-controls .btn:focus::before, .list-controls .category-breadcrumb > li > a.dropdown-header:focus::before, .edit-category-modal .edit-category-tab-general section.field > .btn:focus::before,
-.edit-category-modal .edit-category-tab-security section.field > .btn:focus::before, #reply-control .contents .submit-panel .btn:focus::before, .fps-select a:focus::before, .search.row > .btn:focus::before,
-.search.row .new-topic-btn .btn:focus::before, .timeline-container .topic-timeline div > button.btn:focus::before,
-.timeline-container .topic-timeline span > button.btn:focus::before, .period-chooser button:focus::before, .top-title-buttons button:focus::before, #topic-footer-buttons div > button.btn:focus::before,
-#topic-footer-buttons span > button.btn:focus::before,
-#topic-footer-buttons > button.btn:focus::before, .user-main .user-right .list-actions .btn:focus::before, .user-navigation .new-private-message:focus::before, .admin-contents .btn:focus::before, .image-upload-controls .btn:hover::before, .select2-container a.select2-choice:hover::before, .list-controls .btn:hover::before, .list-controls .category-breadcrumb > li > a.dropdown-header:hover::before, .edit-category-modal .edit-category-tab-general section.field > .btn:hover::before,
-.edit-category-modal .edit-category-tab-security section.field > .btn:hover::before, #reply-control .contents .submit-panel .btn:hover::before, .fps-select a:hover::before, .search.row > .btn:hover::before,
-.search.row .new-topic-btn .btn:hover::before, .timeline-container .topic-timeline div > button.btn:hover::before,
-.timeline-container .topic-timeline span > button.btn:hover::before, .period-chooser button:hover::before, .top-title-buttons button:hover::before, #topic-footer-buttons div > button.btn:hover::before,
-#topic-footer-buttons span > button.btn:hover::before,
-#topic-footer-buttons > button.btn:hover::before, .user-main .user-right .list-actions .btn:hover::before, .user-navigation .new-private-message:hover::before, .admin-contents .btn:hover::before {
-  opacity: 1;
-}
-.image-upload-controls .btn::before, .select2-container a.select2-choice::before, .list-controls .btn::before, .list-controls .category-breadcrumb > li > a.dropdown-header::before, .edit-category-modal .edit-category-tab-general section.field > .btn::before,
-.edit-category-modal .edit-category-tab-security section.field > .btn::before, #reply-control .contents .submit-panel .btn::before, .fps-select a::before, .search.row > .btn::before,
-.search.row .new-topic-btn .btn::before, .timeline-container .topic-timeline div > button.btn::before,
-.timeline-container .topic-timeline span > button.btn::before, .period-chooser button::before, .top-title-buttons button::before, #topic-footer-buttons div > button.btn::before,
-#topic-footer-buttons span > button.btn::before,
-#topic-footer-buttons > button.btn::before, .user-main .user-right .list-actions .btn::before, .user-navigation .new-private-message::before, .admin-contents .btn::before {
-  background-color: color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12));
-  border-radius: 2px;
-  content: '';
-  display: block;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12))), to(color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12))));
+  background-image: -webkit-linear-gradient(top, color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)));
+  background-image: -o-linear-gradient(top, color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)));
+  background-image: linear-gradient(to bottom, color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)));
 }
 .image-upload-controls .btn:active, .select2-container a.select2-choice:active, .list-controls .btn:active, .list-controls .category-breadcrumb > li > a.dropdown-header:active, .edit-category-modal .edit-category-tab-general section.field > .btn:active,
 .edit-category-modal .edit-category-tab-security section.field > .btn:active, #reply-control .contents .submit-panel .btn:active, .fps-select a:active, .search.row > .btn:active,
@@ -183,16 +157,9 @@ aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.po
 .timeline-container .topic-timeline span > button.btn:active, .period-chooser button:active, .top-title-buttons button:active, #topic-footer-buttons div > button.btn:active,
 #topic-footer-buttons span > button.btn:active,
 #topic-footer-buttons > button.btn:active, .user-main .user-right .list-actions .btn:active, .user-navigation .new-private-message:active, .admin-contents .btn:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
   -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
           box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
-}
-.image-upload-controls .btn:active::before, .select2-container a.select2-choice:active::before, .list-controls .btn:active::before, .list-controls .category-breadcrumb > li > a.dropdown-header:active::before, .edit-category-modal .edit-category-tab-general section.field > .btn:active::before,
-.edit-category-modal .edit-category-tab-security section.field > .btn:active::before, #reply-control .contents .submit-panel .btn:active::before, .fps-select a:active::before, .search.row > .btn:active::before,
-.search.row .new-topic-btn .btn:active::before, .timeline-container .topic-timeline div > button.btn:active::before,
-.timeline-container .topic-timeline span > button.btn:active::before, .period-chooser button:active::before, .top-title-buttons button:active::before, #topic-footer-buttons div > button.btn:active::before,
-#topic-footer-buttons span > button.btn:active::before,
-#topic-footer-buttons > button.btn:active::before, .user-main .user-right .list-actions .btn:active::before, .user-navigation .new-private-message:active::before, .admin-contents .btn:active::before {
-  opacity: 1;
 }
 .image-upload-controls [disabled].btn, .select2-container a[disabled].select2-choice, .list-controls [disabled].btn, .list-controls .category-breadcrumb > li > a[disabled].dropdown-header, .edit-category-modal .edit-category-tab-general section.field > [disabled].btn,
 .edit-category-modal .edit-category-tab-security section.field > [disabled].btn, #reply-control .contents .submit-panel [disabled].btn, .fps-select a[disabled], .search.row > [disabled].btn,
@@ -206,21 +173,9 @@ aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.po
 #topic-footer-buttons span > button.disabled.btn,
 #topic-footer-buttons > button.disabled.btn, .user-main .user-right .list-actions .disabled.btn, .user-navigation .disabled.new-private-message, .admin-contents .disabled.btn {
   background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12)) !important;
+  background-image: none;
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
-}
-.image-upload-controls [disabled].btn::before, .select2-container a[disabled].select2-choice::before, .list-controls [disabled].btn::before, .list-controls .category-breadcrumb > li > a[disabled].dropdown-header::before, .edit-category-modal .edit-category-tab-general section.field > [disabled].btn::before,
-.edit-category-modal .edit-category-tab-security section.field > [disabled].btn::before, #reply-control .contents .submit-panel [disabled].btn::before, .fps-select a[disabled]::before, .search.row > [disabled].btn::before,
-.search.row .new-topic-btn [disabled].btn::before, .timeline-container .topic-timeline div > button[disabled].btn::before,
-.timeline-container .topic-timeline span > button[disabled].btn::before, .period-chooser button[disabled]::before, .top-title-buttons button[disabled]::before, #topic-footer-buttons div > button[disabled].btn::before,
-#topic-footer-buttons span > button[disabled].btn::before,
-#topic-footer-buttons > button[disabled].btn::before, .user-main .user-right .list-actions [disabled].btn::before, .user-navigation [disabled].new-private-message::before, .admin-contents [disabled].btn::before, .image-upload-controls .disabled.btn::before, .select2-container a.disabled.select2-choice::before, .list-controls .disabled.btn::before, .list-controls .category-breadcrumb > li > a.disabled.dropdown-header::before, .edit-category-modal .edit-category-tab-general section.field > .disabled.btn::before,
-.edit-category-modal .edit-category-tab-security section.field > .disabled.btn::before, #reply-control .contents .submit-panel .disabled.btn::before, .fps-select a.disabled::before, .search.row > .disabled.btn::before,
-.search.row .new-topic-btn .disabled.btn::before, .timeline-container .topic-timeline div > button.disabled.btn::before,
-.timeline-container .topic-timeline span > button.disabled.btn::before, .period-chooser button.disabled::before, .top-title-buttons button.disabled::before, #topic-footer-buttons div > button.disabled.btn::before,
-#topic-footer-buttons span > button.disabled.btn::before,
-#topic-footer-buttons > button.disabled.btn::before, .user-main .user-right .list-actions .disabled.btn::before, .user-navigation .disabled.new-private-message::before, .admin-contents .disabled.btn::before {
-  display: none;
 }
 .image-upload-controls .btn-danger.btn, .select2-container a.btn-danger.select2-choice, .list-controls .btn-danger.btn, .list-controls .category-breadcrumb > li > a.btn-danger.dropdown-header, .edit-category-modal .edit-category-tab-general section.field > .btn-danger.btn,
 .edit-category-modal .edit-category-tab-security section.field > .btn-danger.btn, #reply-control .contents .submit-panel .btn-danger.btn, .fps-select a.btn-danger, .search.row > .btn-danger.btn,
