--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -93,45 +93,24 @@
 .user-navigation .user-archive .btn:focus, .mobile-view .mobile-nav > li > a:hover, .list-controls .nav > li > a:hover, .show-topic-admin:hover, .user-navigation > .btn:hover,
 .user-navigation .user-archive .btn:hover {
   background-color: color-chooser($tertiary, #ffffff);
-}
-.mobile-view .mobile-nav > li > a:focus::before, .list-controls .nav > li > a:focus::before, .show-topic-admin:focus::before, .user-navigation > .btn:focus::before,
-.user-navigation .user-archive .btn:focus::before, .mobile-view .mobile-nav > li > a:hover::before, .list-controls .nav > li > a:hover::before, .show-topic-admin:hover::before, .user-navigation > .btn:hover::before,
-.user-navigation .user-archive .btn:hover::before {
-  opacity: 1;
-}
-.mobile-view .mobile-nav > li > a::before, .list-controls .nav > li > a::before, .show-topic-admin::before, .user-navigation > .btn::before,
-.user-navigation .user-archive .btn::before {
-  background-color: color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12));
-  border-radius: 2px;
-  content: '';
-  display: block;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12))), to(color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12))));
+  background-image: -webkit-linear-gradient(top, color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)));
+  background-image: -o-linear-gradient(top, color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)));
+  background-image: linear-gradient(to bottom, color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)), color-chooser(rgba(0, 0, 0, 0.12), rgba(0, 0, 0, 0.12)));
 }
 .mobile-view .mobile-nav > li > a:active, .list-controls .nav > li > a:active, .show-topic-admin:active, .user-navigation > .btn:active,
 .user-navigation .user-archive .btn:active {
+  background-color: color-chooser(rgba(204, 204, 204, 0.25), rgba(153, 153, 153, 0.4));
   -webkit-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
           box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.4);
-}
-.mobile-view .mobile-nav > li > a:active::before, .list-controls .nav > li > a:active::before, .show-topic-admin:active::before, .user-navigation > .btn:active::before,
-.user-navigation .user-archive .btn:active::before {
-  opacity: 1;
 }
 .mobile-view .mobile-nav > li > a[disabled], .list-controls .nav > li > a[disabled], [disabled].show-topic-admin, .user-navigation > [disabled].btn,
 .user-navigation .user-archive [disabled].btn, .mobile-view .mobile-nav > li > a.disabled, .list-controls .nav > li > a.disabled, .disabled.show-topic-admin, .user-navigation > .disabled.btn,
 .user-navigation .user-archive .disabled.btn {
   background-color: color-chooser(rgba(255, 255, 255, 0.12), rgba(0, 0, 0, 0.12)) !important;
+  background-image: none;
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
-}
-.mobile-view .mobile-nav > li > a[disabled]::before, .list-controls .nav > li > a[disabled]::before, [disabled].show-topic-admin::before, .user-navigation > [disabled].btn::before,
-.user-navigation .user-archive [disabled].btn::before, .mobile-view .mobile-nav > li > a.disabled::before, .list-controls .nav > li > a.disabled::before, .disabled.show-topic-admin::before, .user-navigation > .disabled.btn::before,
-.user-navigation .user-archive .disabled.btn::before {
-  display: none;
 }
 .mobile-view .mobile-nav > li > a.btn-danger, .list-controls .nav > li > a.btn-danger, .btn-danger.show-topic-admin, .user-navigation > .btn-danger.btn,
 .user-navigation .user-archive .btn-danger.btn, .mobile-view .mobile-nav > li > a.cancel, .list-controls .nav > li > a.cancel, .cancel.show-topic-admin, .user-navigation > .cancel.btn,
