--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -158,7 +158,7 @@
       }
 
       .cancel {
-        @extend %btn-flat;
+        @extend %btn-flat-simple;
 
         margin-left: $card-inner-spacer-x;
       }
