Convert FA `fa-hand-right-o` to MD `send`

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -194,6 +194,10 @@
   @include material-icons('settings');
 }
 
+.fa-hand-o-right {
+  @include material-icons('send');
+}
+
 .fa-header {
   @include material-icons('format_size');
 }
