Fix topic footer notification button styles

--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -19,6 +19,8 @@
 }
 
 .dropdown-select-box.dropdown-select-box {
+  height: $btn-height;
+
   .dropdown-header .btn {
     height: $btn-height;
   }
