--- a/common/common.scss
+++ b/common/common.scss
@@ -1849,6 +1849,9 @@ div.ac-wrap input[type='text'] {
   white-space: nowrap;
 }
 
+.dropdown-select-box.dropdown-select-box {
+  height: 36px;
+}
 .dropdown-select-box.dropdown-select-box .dropdown-header .btn {
   height: 36px;
 }
@@ -5292,7 +5295,6 @@ nav.post-controls .show-replies i {
   max-width: 230px;
 }
 #topic-footer-buttons p {
-  line-height: 36px;
   margin-bottom: 8px;
   vertical-align: middle;
 }
@@ -5323,13 +5325,21 @@ nav.post-controls .show-replies i {
       -ms-flex-positive: 1;
           flex-grow: 1;
   margin-right: 8px;
-  white-space: nowrap;
 }
 #topic-footer-buttons .btn {
   margin: 0;
 }
 #topic-footer-buttons .fa {
   opacity: 1;
+}
+#topic-footer-buttons .topic-notifications-button {
+  min-width: 100%;
+}
+#topic-footer-buttons .topic-notifications-button .reason {
+  line-height: 1.428571;
+  margin-top: 8.000003px;
+  margin-bottom: 0;
+  margin-left: 8px;
 }
 
 .topic-map {
