--- a/common/common.scss
+++ b/common/common.scss
@@ -19,7 +19,7 @@
 }
 
 blockquote::after, blockquote::before, aside.quote .quote-controls .back::before,
-aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select2-container a.select2-choice abbr::before, .select2-container a.select2-choice .select2-arrow b::before, .select2-search-choice-close::before, .d-header button.sign-up-button::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-asterisk::before, .fa-at::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bed::before, .fa-bold::before, .fa-bookmark::before, .fa-briefcase::before, .fa-calendar::before, .fa-calendar-plus-o::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-copy::before, .fa-copyright::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-exclamation-triangle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-fast-backward::before, .fa-fast-forward::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-gear::before, .fa-hand-o-right::before, .fa-header::before, .fa-heart::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-minus::before, .fa-mobile::before, .fa-moon-o::before, .fa-paint-brush::before, .fa-pencil::before, .fa-pencil-square-o::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-sun-o::before, .fa-tasks::before, .fa-television::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, .pika-next::before, .pika-prev::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggle-preview::before, #reply-control .toggle-toolbar::before, #reply-control .toggler::before, nav.post-controls button .read-icon::before {
+aside.quote .quote-controls .quote-other-topic::before, .d-editor-preview div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .expanded-quote div.poll[data-poll-type='multiple'] li[data-poll-option-id]::before, .d-editor-preview div.poll li[data-poll-option-id]::before, .expanded-quote div.poll li[data-poll-option-id]::before, .select2-container a.select2-choice abbr::before, .select2-container a.select2-choice .select2-arrow b::before, .select2-search-choice-close::before, .d-header button.sign-up-button::before, .fa-angle-double-down::before, .fa-arrow-down::before, .fa-asterisk::before, .fa-at::before, .fa-backward::before, .fa-bar-chart-o::before, .fa-bars::before, .fa-bed::before, .fa-bold::before, .fa-bookmark::before, .fa-briefcase::before, .fa-calendar::before, .fa-calendar-plus-o::before, .fa-caret-down::before, .fa-caret-right::before, .fa-caret-up::before, .fa-certificate::before, .fa-check::before, .fa-check-square-o::before, .fa-chevron-down::before, .fa-chevron-up::before, .fa-circle::before, .fa-circle-o::before, .fa-clipboard::before, .fa-close::before, .fa-clock-o::before, .fa-code::before, .fa-copy::before, .fa-copyright::before, .fa-cog::before, .fa-comment::before, .fa-comment-o::before, .fa-compress::before, .fa-desktop::before, .fa-dot-circle-o::before, .fa-download::before, .fa-ellipsis-h::before, .fa-envelope::before, .fa-envelope-o::before, .fa-exclamation-circle::before, .fa-exclamation-triangle::before, .fa-expand::before, .fa-eye::before, .fa-eye-slash::before, .fa-fast-backward::before, .fa-fast-forward::before, .fa-file-text-o::before, .fa-flag::before, .fa-folder::before, .fa-gear::before, .fa-hand-o-right::before, .fa-header::before, .fa-heart::before, .fa-italic::before, .fa-link::before, .fa-list::before, .fa-list-ol::before, .fa-list-ul::before, .fa-lock::before, .fa-mail-forward::before, .fa-meh-o::before, .fa-minus::before, .fa-mobile::before, .fa-moon-o::before, .fa-paint-brush::before, .fa-pencil::before, .fa-pencil-square-o::before, .fa-picture-o::before, .fa-play::before, .fa-plus::before, .fa-question-circle::before, .fa-quote-right::before, .fa-refresh::before, .fa-reply::before, .fa-rocket::before, .fa-search::before, .fa-shield::before, .fa-sign-out::before, .fa-smile-o::before, .fa-square-o::before, .fa-sun-o::before, .fa-tag::before, .fa-tasks::before, .fa-television::before, .fa-thumb-tack::before, .fa-times::before, .fa-times-circle::before, .fa-trash::before, .fa-trash-o::before, .fa-undo::before, .fa-unlock::before, .fa-unlock-alt::before, .fa-upload::before, .fa-user::before, .fa-user-plus::before, .fa-users::before, .fa-wrench::before, .pika-next::before, .pika-prev::before, #reply-control.draft .toggler::before, #reply-control .grippie::before, #reply-control .toggle-preview::before, #reply-control .toggle-toolbar::before, #reply-control .toggler::before, nav.post-controls button .read-icon::before {
   font-family: 'Material Icons';
   -webkit-font-feature-settings: 'liga';
           font-feature-settings: 'liga';
@@ -2516,6 +2516,14 @@ ol.category-breadcrumb li {
   content: "person_pin";
 }
 
+.fa-backward {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-backward::before {
+  content: "settings_backup_restore";
+}
+
 .fa-bar-chart-o {
   font-size: inherit !important;
   line-height: inherit !important;
@@ -3122,6 +3130,14 @@ ol.category-breadcrumb li {
 }
 .fa-sun-o::before {
   content: "brightness_5";
+}
+
+.fa-tag {
+  font-size: inherit !important;
+  line-height: inherit !important;
+}
+.fa-tag::before {
+  content: "label";
 }
 
 .fa-tasks {
@@ -4662,6 +4678,13 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   padding-left: 16px;
 }
 
+#bulk-select {
+  background-color: transparent;
+  padding: 0;
+  top: 140px;
+  right: 16px;
+}
+
 .create-topics-notice {
   margin-bottom: 16px;
 }
@@ -4706,6 +4729,36 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   margin-left: 4px;
 }
 
+.topic-bulk-actions-modal .bulk-buttons {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  margin-right: -24px;
+  margin-left: -24px;
+}
+.topic-bulk-actions-modal .bulk-buttons:last-child .btn:last-child {
+  border-bottom: 0;
+}
+.topic-bulk-actions-modal .bulk-buttons .btn {
+  border-bottom: 1px solid color-chooser(#000000, #e0e0e0);
+  border-radius: 0;
+  display: block;
+  font-weight: normal;
+  margin: 0 0 -1px;
+  padding: 20px 24px;
+  text-align: inherit;
+  text-transform: none;
+  width: 100%;
+}
+.topic-bulk-actions-modal .bulk-buttons .btn:last-child {
+  margin-bottom: 0;
+}
+.topic-bulk-actions-modal .bulk-buttons .btn .fa {
+  margin-right: 12px;
+  opacity: 0.7;
+}
+.topic-bulk-actions-modal .modal-body:last-child {
+  padding-bottom: 0;
+}
+
 .top-lists + .topic-list {
   position: relative;
 }
@@ -4718,6 +4771,12 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   top: -12px;
   right: 0;
   left: 0;
+}
+.topic-list tbody tr.has-excerpt .star,
+.topic-list tbody > tr.has-excerpt .star,
+.topic-list > tbody tr.has-excerpt .star,
+.topic-list > tbody > tr.has-excerpt .star {
+  vertical-align: middle;
 }
 .topic-list tbody td,
 .topic-list tbody th {
@@ -4778,6 +4837,12 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
 .topic-list thead th {
   font-weight: bold;
   white-space: nowrap;
+}
+.topic-list thead .bulk-select-topics {
+  margin-right: 6px;
+}
+.topic-list thead .bulk-select-topics .btn {
+  margin-right: 6px;
 }
 .topic-list .avatar {
   height: 24px;
