--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -161,4 +161,6 @@
 
 #main-outlet {
   padding-top: ($header-height + $header-margin-y);
+  padding-right: ($grid-gutter-width / 2);
+  padding-left: ($grid-gutter-width / 2);
 }
